# openvsip

./: .gitignore  .travis.yml  CNAME  LICENSE  LICENSE.BSD  Makefile.in  README  README.md  _config.yml  aclocal.m4  autogen.sh  config.guess  config.mk.in  config.sub  configure  configure.ac  contact.md  index.md  news.html  ovxx-cuda.pc.in  ovxx.pc.in  release-notes-csl.xml  rules.mk.in  vsipl++-spu.pc.in
_layouts/: layout.html
_posts/: 2014-05-09-a-new-website.md  2014-06-14-opencl-support.md
apps/: GNUmakefile.inc.in
apps/sarsim/: GNUmakefile  chk-simd-48-4  chk-simd-8-4  dat2xv.c  frm_hdr.c  histcmp.c  loadview.hpp  mit-sarsim.cpp  read_tbv.c  read_tbv.h  sarsim.cpp  sarsim.hpp  sarx.h  simd-48-4  simd-8-4  sims-48-4  sims-8-4  vis-sims-48-4  vis-sims-8-4
apps/ssar/: README  make_images.sh  makefile.spu.standalone.in  ssar.cpp  viewtopng.cpp
autom4te.cache/: output.0  requests  traces.0
benchmarks/: Makefile.in  alloc_block.hpp  benchmark.hpp  benchmarks.hpp  context-installed.pre.in  conv.cpp  conv2d.cpp  copy.cpp  corr.cpp  create_map.hpp  dist_vmul.cpp  dot.cpp  fastconv.cpp  fastconv.hpp  fft.cpp  fftm.cpp  fir.cpp  histogram.cpp  loop.hpp  main.cpp  makefile.standalone.in  maxval.cpp  mcopy.cpp  meansqval.cpp  meanval.cpp  memwrite.cpp  mprod.hpp  mvprod.cpp  prod.cpp  prod_var.cpp  pwarp.cpp  sfilt.cpp  sort.cpp  stream.cpp  sumsqval.cpp  sumval.cpp  sumval_simd.cpp  task_switch.cpp  vmmul.cpp  vmprod.cpp
benchmarks/QMTest/: benchmark.py  classes.qmc  configuration-installed.pre.in  configuration.in  database.py
benchmarks/cuda/: expr.cpp  transpose.cpp  unary.cpp  vmmul.cpp
benchmarks/cvsip/: conv.cpp  conv2d.cpp  dot.cpp  fastconv.cpp  fft.cpp  fftm.cpp  fir.cpp  makefile.standalone.in  mcopy.cpp  prod.cpp  vma.cpp  vmmul.cpp  vmul.cpp
benchmarks/expr/: svmul.cpp  vadd.cpp  vam.cpp  vatan.cpp  vconj.cpp  vcos.cpp  vdiv.cpp  vhypot.cpp  vlog.cpp  vma.cpp  vmagsq.cpp  vminus.cpp  vmul.cpp  vmul.hpp  vmul_c.cpp  vmul_par.cpp  vsq.cpp  vsqrt.cpp  vsub.cpp
benchmarks/fftw3/: fft.cpp  fftm.cpp
benchmarks/hpec_kernel/: cfar.cpp  cfar_c.cpp  firbank.cpp  svd.cpp
benchmarks/ipp/: conv.cpp  fft.cpp  fft_ext.cpp  mcopy.cpp
benchmarks/lapack/: chold.cpp  common.hpp  lud.cpp  qrd.cpp  svd.cpp
benchmarks/mpi/: alltoall.cpp  copy.cpp
benchmarks/sal/: fastconv.cpp  fft.cpp  lvgt.cpp  memwrite.cpp  vatan2.cpp  vma.cpp  vmul.cpp  vthresh.cpp
benchmarks/simd/: memwrite.cpp
css/: layout.css  logo.py  style.css
doc/: GNUmakefile.inc.in  Makefile.in  architecture.md  building.md  getting-started.md  index.md  related.md
examples/: example1.cpp
examples/cuda/: custom.cpp  custom_kernel.cu  makefile.standalone.in  simple_udk_cuda.cu
examples/dda/: stride.cpp
examples/dispatch/: mprod.cpp  rt_custom.cpp
examples/eval/: evaluation.cpp  makefile.standalone.in
examples/io/: makefile.standalone.in
examples/parallel/: makefile.standalone.in  task.cpp  vadd.cpp
examples/pi/: conv.cpp  foreach.cpp  makefile.standalone.in  stencil.cpp
examples/profile/: memory.cpp
examples/python/: cuda.py  fft.py
examples/signal/: conv.cpp  fft2d.cpp  makefile.standalone.in
examples/solvers/: covsol.cpp
examples/ukernel/: box1.cpp  box2.cpp  fconv.cpp  fft.cpp  id1.cpp  id2.cpp  vmul.cpp
examples/ustorage/: makefile.standalone.in
examples/views/: makefile.standalone.in  user_datatype.cpp
m4/: cbe.m4  cuda.m4  cvsip.m4  fft.m4  ipp.m4  lapack.m4  mkl.m4  mpi.m4  opencl.m4  parallel.m4  profile.m4  python.m4  release.m4  sal.m4  timer.m4  tracing.m4
python/: GNUmakefile.in  Makefile.in  __init__.py  block.hpp  view.cpp
python/cuda/: __init__.py  compiler.py  device.cpp
python/selgen/: generation.cpp
python/signal/: __init__.py  corr.cpp  fftm.cpp  fir.cpp  freqswap.cpp  window.cpp
python/src/: Makefile.in  __init__.py  _block.py  _block_b.cpp  _block_cd.cpp  _block_cf.cpp  _block_d.cpp  _block_f.cpp  _block_i.cpp  _cast.cpp  _import.py  _rand_cd.cpp  _rand_d.cpp  _rand_f.cpp  bblock.cpp  block_api.hpp  cast.py  cdblock.cpp  cfblock.cpp  dblock.cpp  fblock.cpp  iblock.cpp  library.cpp  matrix.py  random.hpp  random.py  selgen.py  support.cpp  types.cpp  unique_ptr.hpp  vector.py
samples/examples/: Makefile  example.cpp  mprod.cpp
scripts/: GNUmakefile.inc.in  build  char.db  char.pl  configurations  fix-pkg-config-prefix.sh  graph.db  graph.pl  makefile.datasheet  test-examples
share/: Makefile  Makefile.in  common.mk.in
sourceryvsipl++-2.3/sbin/: set-prefix.sh
src/ovxx/: Makefile.in  adjust_layout.hpp  aligned_allocator.hpp  aligned_array.hpp  allocator.cpp  allocator.hpp  assign.hpp  assign_fwd.hpp  block_traits.hpp  byteswap.hpp  c++11.hpp  check_config.cpp  check_config.hpp  chrono.cpp  chrono.hpp  complex_traits.hpp  config.hpp  ct_assert.hpp  dda.hpp  dispatch.hpp  domain_utils.hpp  element_proxy.hpp  equal.hpp  expr.hpp  huge_page_allocator.cpp  huge_page_allocator.hpp  inttypes.hpp  is_same_ptr.hpp  layout.hpp  length.hpp  library.cpp  library.hpp  opencl.hpp  ops_count.hpp  order_traits.hpp  output.hpp  pointer.hpp  python.hpp  refcounted.hpp  storage.hpp  (+9 more)
src/vsip/: GNUmakefile.inc.in  Makefile.in  complex.hpp  dda.hpp  dense.hpp  domain.hpp  initfin.cpp  initfin.hpp  layout.hpp  map.hpp  math.hpp  matrix.hpp  parallel.hpp  random.hpp  selgen.hpp  serialization.hpp  signal.hpp  solvers.hpp  support.cpp  support.hpp  (+2 more)
support/: context-installed.pre.in  context.in  storage.hpp  test.hpp
tests/: GNUmakefile.inc.in  Makefile.in  appmap.cpp  block_traits.cpp  check_config.cpp  complex.cpp  conv-2d.cpp  corr-2d.cpp  correlation.cpp  counter.cpp  ct_assert.cpp  dense.cpp  dispatch.cpp  domain.cpp  domain_utils.cpp  element_proxy.cpp  extdata.cpp  fastconv.cpp  fft.cpp  fft2d.cpp  fft_be.cpp  fft_block_type.cpp  fft_common.hpp  fftm.cpp  fir.cpp  fns_scalar.cpp  fns_userelt.cpp  freqswap.cpp  histogram.cpp  iir.cpp  index.cpp  index_traversal.cpp  initfini.cpp  ip_transpose.cpp  lvalue-proxy.cpp  make.standalone  map.cpp  matrix-transpose.cpp  matrix.cpp  matvec-dot.cpp  (+56 more)
utils/: GNUmakefile.inc.in  Makefile.in  utils.mk.in
(+4415 files in other folders)
